versão incompleta de categorias

--- a/src/styles/categoria.css
+++ b/src/styles/categoria.css
@@ -19,3 +19,9 @@
 #icone {
     cursor: pointer;
 }
+
+#div-acoes-categoria {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
