--- a/src/styles/produto.css
+++ b/src/styles/produto.css
@@ -16,6 +16,10 @@
     font-weight: bold;
 }
 
+#label-descricao {
+    margin: 4px;
+}
+
 #label-preco {
     margin: 4px;
     color: green;
@@ -25,7 +29,16 @@
     cursor: pointer;
 }
 
-#div-produtos {
+#div-produto {
     display: flex;
     flex-direction: column;
+}
+
+
+@media screen and (max-width: 800px) {
+    #card-content-produto {
+        align-items: flex-start;
+        flex-direction: column;
+        padding: 10px;
+    }
 }
