--- a/src/styles/produtos.css
+++ b/src/styles/produtos.css
@@ -1,4 +1,10 @@
+#produtos {
+    display: flex;
+    justify-content: center;
+}
+
 #section-body-produtos {
+    width: 50%;
     display: flex;
     flex-direction: column;
 }
@@ -9,7 +15,9 @@
 
 #card-content-produtos {
     display: flex;
+    align-items: center;
     flex-direction: row;
+    justify-content: space-between;
     padding: 20px;
 }
 
@@ -18,5 +26,91 @@
 }
 
 #div-produtos {
+    margin: 8px 8px 60px;
+}
+
+#div-menu-produtos {
+    top: 0;
+    left: auto;
+    right: 0;
+    z-index: 1100;
+    position: sticky;
+    background-color: white;
+}
+
+#div-inputs-produtos {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    margin-top: 8px;
+    margin-bottom: 8px;
+}
+
+#div-formulario-inputs-produto {
+    width: 100%;
+}
+
+#div-vizualizar-cadastro {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    cursor: pointer;
+}
+
+#div-botao-vizualizar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 8px;
+    cursor: pointer;
+}
+
+#label-vizualizar {
+    color: #1e1e26;
+    cursor: pointer;
+}
+
+#div-botao-salvar-produto {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin: 8px;
+}
+
+@media screen and (max-width: 1440px) {
+    #section-body-produtos {
+        width: 65%;
+    }
+}
+
+@media screen and (max-width: 1366px) {
+    #section-body-produtos {
+        width: 70%;
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    #section-body-produtos {
+        width: 75%;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    #section-body-produtos {
+        width: 80%;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    #section-body-produtos {
+        width: 85%;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    #section-body-produtos {
+        width: 100%;
+    }
 }
