--- a/src/styles/produtos.css
+++ b/src/styles/produtos.css
@@ -42,6 +42,7 @@
     width: 100%;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     margin-top: 8px;
     margin-bottom: 8px;
 }
@@ -71,12 +72,18 @@
     cursor: pointer;
 }
 
-#div-botao-salvar-produto {
+#div-botao-salvar-produtos {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 8px;
+}
+
+#card-media-imagem-pequena {
+    width: 100px;
+    height: 100px;
+    border-radius: 4px;
 }
 
 @media screen and (max-width: 1440px) {
