--- a/src/styles/categorias.css
+++ b/src/styles/categorias.css
@@ -45,7 +45,10 @@
     width: 100%;
 }
 
-#div-inputs-categoria {
+#div-inputs-categorias {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     margin-top: 8px;
     margin-bottom: 8px;
 }
@@ -65,6 +68,12 @@
     align-items: center;
     justify-content: center;
     margin: 8px;
+}
+
+#card-media-imagem-pequena {
+    width: 100px;
+    height: 100px;
+    border-radius: 4px;
 }
 
 @media screen and (max-width: 600px) {
