--- a/src/styles/configuracoes.css
+++ b/src/styles/configuracoes.css
@@ -21,6 +21,14 @@
     flex-direction: column;
 }
 
+#div-configuracoes-centro {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex: 1;
+}
+
 #div-configuracoes-direito {
     display: flex;
     flex: 1;
@@ -36,4 +44,9 @@
     display: flex;
     flex: 1;
     justify-content: center;
+}
+
+#qrcode {
+    width: 200px;
+    height: 200px;
 }
