--- a/src/styles/pedidos.css
+++ b/src/styles/pedidos.css
@@ -6,4 +6,14 @@
 
 #section-body-pedidos {
     width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-bottom: 100px;
+}
+
+@media screen and (max-width: 800px) {
+    #section-body-pedidos {
+        justify-content: center;
+    }
 }
