mudando para o firebase

--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -1,5 +1,6 @@
 #login {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
@@ -16,4 +17,9 @@
 
 #div-formulario-login {
     margin: 10px;
+}
+
+#logo-login {
+    width: 100px;
+    height: 100px;
 }
